Changelog
=========


2.0.3 (unreleased)
------------------

- Adjust the containing_dossier indexer: it should also work for objects in the inbox.
  [phgross]

- Added IDisplayedInOverview Interfaces:
  to mark additional dossier behaviors, which should displayed in the overview.
  Issue #1251 Darstellung von Zusatzattributen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1251/
  [phgross]

- Refactored some parts of opengever.dossier (overview, added tests, adjust some docstrings, pep8)
  [phgross]

- Add reindexing the containing_dossier value also in the globalindex.
  [phgross]

- Added new containing_dossier index used for show in the searchresults and some other listings
  Issue #1253 Darstellung Dossiertitel bei Suchresultaten (Subdossiers, Dokumente, Aufgaben)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1253
  [phgross]

- Tabbedview custom storage key: use better matching interface,
  according to changes in ftw.tabbedview.
  [jone]


2.0.2 (2011-12-06)
------------------

- Fixed workflow definitions: add all configured permission also to the permissions managed by this workflow.
  [phgross]


2.0.1 (2011-11-17)
------------------

- Fixed changelog
  [lgraf]


2.0 (2011-11-17)
----------------

- Fixed dossier report for the myDossiers view, activate the report view on every content type.
  [phgross]

- Issue #1249 Mail: Beim Importieren eines E-Mails muss die Spalte Ausgangsdatum leer bleiben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1249/
  back to ftw.table helper function for readable_date
  [eschmutz]

- Made the filing number search more comfortable: added searchable_filing_no ZCTextIndex
  Issue #1260 Suche nach Ablagenummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1260
  [phgross]

- Add test for main_dossier to test mapped workflows
  [eschmutz]
